<resources>
    <string name="app_name">Health</string>
    <string name="watch_your_health"><![CDATA[Watch Your Health  ]]></string>
    <string name="todo"></string>
    <string name="enter_the_following_information"><![CDATA[Enter the following information  ]]></string>
    <string name="heart_rate">Heart Rate:</string>
    <string name="blood_pressure">Blood Presure SYS:</string>
    <string name="blood_pressure1">Blood Presure DIA:</string>
    <string name="blood_pressure2">Blood Presure:</string>
    <string name="oxigen_saturation">Oxigen Saturation:</string>
    <string name="temperature">Temperature:</string>
    <string name="sugar">Sugar:</string>
    <string name="my_medicine">My Medicine</string>
    <string name="analyze">Analyze</string>
    <string name="todo1"></string>
    <string name="name_of_the_medicine"><![CDATA[Name of the Medicine  ]]></string>
    <string name="textview">textview</string>
    <string name="return0">Return</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_pass">Enter your pass</string>
    <string name="sing_up">Sing Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="sing_in">Sing In</string>

    //registre
    <string name="nombre">Name</string>
    <string name="ingrese_su_correo">enter your email</string>
    <string name="apellidos">Surnames</string>
    <string name="string_peso" />
    <string name="date">01/01/1999</string>
    <string name="altura">height</string>
    <string name="peso">weight</string>
    <string name="ingrese_su_password">Enter your password</string>
    <string name="aceptar_terminos_y_condiciones">Accept terms and conditions</string>
    <string name="ButtonSend">Send</string>

    <string name="hora">Time</string>
    <string name="fecha">Date</string>
    <string name="alarm">Alarm</string>
    <string name="b_r">B.p:</string>
    <string name="h_r">H_R:</string>
    <string name="b_p">B.P:</string>
    <string name="o_s">O.S:</string>
    <string name="t">T:</string>
    <string name="s">S:</string>
    <string name="results_report">Results Report</string>
    <string name="edit_perfil">Edit Profile</string>
    <string name="_01_01_1999">_01_01_1999</string>
    <string name="send">Send</string>
    <string name="changed_to">Notificación cambiada a las %s</string>
    <string name="time_selected_is">La hora seleccionada es:</string>
    <string name="change_time">Cambia la hora</string>
    <string name="select_time">Selecciona la hora</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="your_email">Ingrese su Email</string>
    <string name="Your_new_password">Ingrese su nueva contraseña</string>
    <string name="repit_yourpassword">Ingrese nuevamente</string>
    <string name="button_remember">Recuperar contraseña</string>



    //alarm
    <string name="name_regis_alarm">registre su medicina</string>
    <string name="hora_select">Selecione la hora:</string>
    <string name="name_medicien">Ingrese el nombre de su medicina</string>
    <string name="buttonMas">+</string>
    <string name="login">Login</string>
    <string name="aceptar">aceptar</string>

    <string name="si">Sí</string>
    <string name="no">No</string>
</resources>
