<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_login"
    android:layout_height="wrap_content"
    tools:context=".Registre">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="183dp"
            android:layout_height="125dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="299dp"
            android:layout_height="390dp"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress" />



            <EditText
                android:id="@+id/peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/peso"
                android:inputType="number"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/altura"
                android:inputType="number"
                tools:ignore="LabelFor"
                tools:targetApi="o" />


            <EditText
                android:id="@+id/ingrese_su_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/ingrese_su_password"
                android:inputType="textPassword"
                tools:ignore="LabelFor"
                tools:targetApi="o" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20px" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30px" />

            <Button
                android:id="@+id/ButtonSendRegister"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano"
                android:text="@string/send" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>