<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_login"
    android:layout_height="wrap_content"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="189dp"
            android:layout_height="143dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="352dp"
            android:gravity="center|top"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_email"
                android:drawableLeft="@drawable/ic_action_name"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_action_name" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <EditText
                android:id="@+id/editPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/enter_your_pass"
                android:drawableLeft="@drawable/ic_action_name1"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_action_name1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/buttonSingup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano"
                android:text="@string/sing_up" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonForget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano1"
                android:onClick="forgetPassword"
                android:text="@string/forget_password" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <Button
                android:id="@+id/buttonSingin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano1"
                android:onClick="Registro"
                android:text="@string/sing_in" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />


            <com.google.android.gms.common.SignInButton
                android:id="@+id/signInButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></com.google.android.gms.common.SignInButton>




        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>