<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_login"
    tools:context=".Reminder">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="189dp"
            android:layout_height="143dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1" />

        <LinearLayout
            android:layout_width="338dp"
            android:layout_height="228dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.532">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/time_selected_is"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/notifications_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:textSize="30sp"
                tools:text="12:00" />


            <Button
                android:id="@+id/change_notification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/change_time"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="216dp"
            android:layout_height="120dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/buttonMas"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/bk_boton_mas"
                android:text="@string/buttonMas"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/buttonReturn"
                android:layout_width="160dp"
                android:layout_height="38dp"
                android:background="@drawable/bk_boton_plano1"
                android:baselineAligned="false"
                android:onClick="returnn"
                android:text="@string/return0"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="126dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center|center_vertical"
            android:text="@string/alarm"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>