<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ic_login"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="282dp"
            android:layout_height="33dp"
            android:gravity="center|fill_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/imageLog">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:onClick="Pro"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/watch_your_health"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="224dp"
            android:layout_height="48dp"
            android:layout_marginTop="4dp"
            android:text="@string/enter_the_following_information"
            android:textIsSelectable="true"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLog" />

        <ImageView
            android:id="@+id/imageLog"
            android:layout_width="174dp"
            android:layout_height="102dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
            app:srcCompat="@mipmap/ic_launcher1"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="290dp"
            android:layout_height="288dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8">

            <LinearLayout
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textRate"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/heart"
                    android:drawableLeft="@mipmap/heart"
                    android:gravity="start|center"
                    android:text="@string/heart_rate" />

                <TextView
                    android:id="@+id/textPressure"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/blood"
                    android:drawableLeft="@mipmap/blood"
                    android:gravity="start|center"
                    android:text="@string/blood_pressure" />

                <TextView
                    android:id="@+id/textPressure2"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/blood"
                    android:drawableLeft="@mipmap/blood"
                    android:gravity="start|center"
                    android:text="@string/blood_pressure1" />

                <TextView
                    android:id="@+id/textSaturaciontion"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/oxigen"
                    android:drawableLeft="@mipmap/oxigen"
                    android:gravity="start|center"
                    android:text="@string/oxigen_saturation" />

                <TextView
                    android:id="@+id/textTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/temperature"
                    android:drawableLeft="@mipmap/temperature"
                    android:gravity="start|center"
                    android:text="@string/temperature" />

                <TextView
                    android:id="@+id/textSugar"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:drawableStart="@mipmap/sugar"
                    android:drawableLeft="@mipmap/sugar"
                    android:gravity="start|center"
                    android:text="@string/sugar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editPressure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editPressure1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editSaturation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/editSugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center|center_vertical"
                    android:inputType="number"
                    tools:ignore="LabelFor"
                    tools:targetApi="o" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="408dp"
            android:layout_height="64dp"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintStart_toStartOf="parent">

            <!--android:backgroundTint="#77D353"-->


            <Button
                android:id="@+id/buttonAnalyze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano"
                android:text="@string/analyze"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="12dip"
                android:layout_height="wrap_content" />

           <!-- <Button
                android:id="@+id/buttonMedicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bk_boton_plano1"
                android:onClick="proAlarm"
                android:text="@string/my_medicine"
                android:textColor="@android:color/white" /> -->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>