<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/ic_login"
    android:layout_height="wrap_content"
    tools:context=".Results">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="319dp"
            android:layout_height="332dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo">

            <LinearLayout
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textRater"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@mipmap/heart"
                    android:gravity="center_vertical"
                    android:text="@string/heart_rate"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textPressurer"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@mipmap/blood"
                    android:gravity="center_vertical"
                    android:text="@string/blood_pressure"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textSaturationr"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@mipmap/oxigen"
                    android:gravity="center_vertical"
                    android:text="@string/oxigen_saturation"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textTemperaturer"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@mipmap/temperature"
                    android:gravity="center_vertical"
                    android:text="@string/temperature"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textSugarr"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:drawableLeft="@mipmap/sugar"
                    android:gravity="center_vertical"
                    android:text="@string/sugar"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textRatem"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|left"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textPressurem"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|left"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textSaturationm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|left"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textTemperaturem"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|left"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textSugarm"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center|left"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="224dp"
            android:layout_height="48dp"
            android:gravity="center_vertical"
            android:text="Results Report"
            android:textIsSelectable="true"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="189dp"
            android:layout_height="143dp"
            android:layout_marginTop="52dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_launcher1" />

        <Button
            android:id="@+id/buttonRetumm"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:background="@drawable/bk_boton_plano"
            android:onClick="return0"
            android:text="Return"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>